working on mobile fixes

--- a/css/master.css
+++ b/css/master.css
@@ -123,7 +123,7 @@ th {
     font-size:1.5em;
 }
 @media only screen and (max-device-width: 480px) {
-    #sidebar, #tagline, #contact-info {
+    #sidebar, #tagline, #contact_info {
         display:none;
     }
     #content {
